# mySpider

./: .gitignore  README.md
pySpider/: Makefile
pyspider/: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
pyspider/src/: __main__.py  cache_manager.py  config.py  crawler.py  politeness_router.py  prioritizer.py  queue_manager.py
pyspider/src/prioritizer/: prioritizer.py
pyspider/src/three_spiders/: __main__.py  crawler.py
pyspider/tests/: test_crawler.py  test_politeness_router.py  test_prioritizer.py  test_queue_manager.py
